[gd_scene load_steps=23 format=3 uid="uid://4ndigpixild7"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/nodes/cyclops_block.gd" id="1_ie8h4"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/resources/convex_block_data.gd" id="2_w2pkc"]
[ext_resource type="Material" uid="uid://d0y4s84b7xweu" path="res://Assets/Mat/wall_mat.tres" id="3_opkgt"]
[ext_resource type="PackedScene" uid="uid://dyxgu75j1khsg" path="res://Prefabs/defaultIndoorLight.tscn" id="4_x15ew"]
[ext_resource type="Environment" uid="uid://e3i1ntpju1jv" path="res://Prefabs/World_Environment.tres" id="5_67j28"]
[ext_resource type="PackedScene" uid="uid://d3jl2cm236pj4" path="res://Prefabs/PuzzlePrefabs/Player.tscn" id="5_wffry"]
[ext_resource type="PackedScene" uid="uid://dpmygljbgpk3o" path="res://Prefabs/PuzzlePrefabs/Rect_Wall.tscn" id="6_ymw0p"]
[ext_resource type="Material" uid="uid://dd2serghojdfx" path="res://Assets/Mat/PuzzleObjects/OrangeTileMat.tres" id="7_uxxnf"]
[ext_resource type="PackedScene" uid="uid://d4fldk18r2dqt" path="res://Prefabs/PuzzlePrefabs/Button.tscn" id="8_e0l7j"]
[ext_resource type="Material" uid="uid://dx65r3364xrf1" path="res://Assets/Mat/PuzzleObjects/OrangeSingleMat.tres" id="9_0o6dn"]
[ext_resource type="Script" path="res://Scripts/MenuScripts/CamRig.gd" id="10_0nig7"]
[ext_resource type="Shader" path="res://Assets/Shaders/Eyelid.gdshader" id="12_5jn8o"]
[ext_resource type="Theme" uid="uid://o04ao5b7484q" path="res://Assets/UI_Theme.tres" id="12_75kmq"]
[ext_resource type="Script" path="res://Scenes/MainMenuPanel.gd" id="13_aalfo"]
[ext_resource type="Script" path="res://Scripts/MenuScripts/SettingsPanel.gd" id="15_uto0o"]
[ext_resource type="Script" path="res://Scripts/MenuScripts/LevelSelectPage.gd" id="16_e8shy"]

[sub_resource type="Resource" id="Resource_p5x60"]
script = ExtResource("2_w2pkc")
selected = false
active = false
collsion = true
physics_layer = 0
physics_mask = 0
vertex_points = PackedVector3Array(-9, 1, -9, -9, 1, 1, -9, -5, 1, -9, -5, -9, 29, -5, 1, 29, 1, 1, 29, -5, -9, 29, 1, -9)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 2, 1, 5, 5, 4, 4, 6, 6, 3, 7, 0, 6, 7, 7, 5)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 4, 0, 1, 0, 2, 0, 3, 1, 2, 1, 4, 1, 5, 2, 5, 2, 3, 3, 4, 3, 5, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 2, 1, 5, 4, 6, 3, 2, 7, 0, 3, 6, 7, 5, 1, 0, 7, 6, 4, 5)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_visible = PackedByteArray(1, 1, 1, 1, 1, 1)
face_color = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
face_selected = PackedByteArray(1, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_pc46u"]
script = ExtResource("2_w2pkc")
selected = false
active = false
collsion = true
physics_layer = 0
physics_mask = 0
vertex_points = PackedVector3Array(10, 0, 0, 10, 11, 0, 0, 11, 0, 0, 0, 0, 0, 0, 10, 0, 11, 10, 10, 11, 10, 10, 0, 10)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 3, 2, 5, 5, 4, 6, 5, 1, 6, 4, 7, 7, 0, 6, 7)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 1, 0, 3, 1, 3, 1, 2, 1, 4, 2, 4, 2, 5, 3, 4, 3, 5, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 3, 2, 5, 6, 5, 2, 1, 0, 3, 4, 7, 6, 7, 4, 5, 0, 7, 6, 1)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_visible = PackedByteArray(1, 1, 1, 1, 1, 1)
face_color = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
face_selected = PackedByteArray(0, 0, 0, 0, 0, 1)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_x4ee0"]
script = ExtResource("2_w2pkc")
selected = false
active = false
collsion = true
physics_layer = 0
physics_mask = 0
vertex_points = PackedVector3Array(0, 11, 0, 0, 11, 1, 0, 0, 1, 0, 0, 0, 18, 0, 0, 18, 0, 1, 18, 11, 1, 18, 11, 0)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 3, 2, 5, 5, 4, 6, 5, 1, 6, 4, 7, 7, 0, 6, 7)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 1, 0, 3, 1, 3, 1, 2, 1, 4, 2, 4, 2, 5, 3, 4, 3, 5, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 3, 2, 5, 6, 5, 2, 1, 0, 3, 4, 7, 6, 7, 4, 5, 0, 7, 6, 1)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_visible = PackedByteArray(1, 1, 1, 1, 1, 1)
face_color = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
face_selected = PackedByteArray(0, 0, 0, 0, 0, 1)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_cim3x"]
script = ExtResource("2_w2pkc")
selected = false
active = false
collsion = true
physics_layer = 0
physics_mask = 0
vertex_points = PackedVector3Array(-9, 0, 0, -9, 0, 10, 1, 0, 10, 1, 0, 0, 1, 11, 0, 1, 11, 10, -9, 11, 10, -9, 11, 0)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 3, 2, 5, 5, 4, 6, 5, 1, 6, 4, 7, 7, 0, 6, 7)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 1, 0, 3, 1, 3, 1, 2, 1, 4, 2, 4, 2, 5, 3, 4, 3, 5, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 3, 2, 5, 6, 5, 2, 1, 0, 3, 4, 7, 6, 7, 4, 5, 0, 7, 6, 1)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_visible = PackedByteArray(1, 1, 1, 1, 1, 1)
face_color = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
face_selected = PackedByteArray(0, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_5fhvr"]
script = ExtResource("2_w2pkc")
selected = false
active = false
collsion = true
physics_layer = 0
physics_mask = 0
vertex_points = PackedVector3Array(-9, 0, 10, -9, 0, 0, -9, 8, 0, -9, 8, 10, 29, 8, 0, 29, 8, 10, 29, 0, 0, 29, 0, 10)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 5, 5, 3, 2, 4, 6, 4, 1, 6, 7, 0, 5, 7, 6, 7)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 1, 0, 3, 1, 4, 1, 3, 1, 2, 2, 4, 2, 5, 3, 5, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 5, 3, 2, 6, 4, 2, 1, 7, 0, 3, 5, 7, 5, 4, 6, 7, 6, 1, 0)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_visible = PackedByteArray(1, 1, 1, 1, 1, 1)
face_color = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
face_selected = PackedByteArray(1, 0, 0, 0, 0, 0)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pvc8a"]
shader = ExtResource("12_5jn8o")
shader_parameter/lid_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
shader_parameter/lid_transparency = 1.0
shader_parameter/close_amount = 0.0
shader_parameter/lid_width = 0.3

[node name="Menu" type="Node3D"]

[node name="StaticGeometry" type="Node3D" parent="."]

[node name="block0" type="Node3D" parent="StaticGeometry"]
script = ExtResource("1_ie8h4")
block_data = SubResource("Resource_p5x60")
materials = Array[Material]([ExtResource("3_opkgt")])

[node name="Block_0" type="Node3D" parent="StaticGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 1, -9)
script = ExtResource("1_ie8h4")
block_data = SubResource("Resource_pc46u")
materials = Array[Material]([ExtResource("3_opkgt")])

[node name="Block_1" type="Node3D" parent="StaticGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -9)
script = ExtResource("1_ie8h4")
block_data = SubResource("Resource_x4ee0")
materials = Array[Material]([ExtResource("3_opkgt")])

[node name="Block_2" type="Node3D" parent="StaticGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -9)
script = ExtResource("1_ie8h4")
block_data = SubResource("Resource_cim3x")
materials = Array[Material]([ExtResource("3_opkgt")])

[node name="Block_3" type="Node3D" parent="StaticGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, -9)
script = ExtResource("1_ie8h4")
block_data = SubResource("Resource_5fhvr")
materials = Array[Material]([ExtResource("3_opkgt")])

[node name="Objects" type="Node3D" parent="."]

[node name="Player" parent="Objects" instance=ExtResource("5_wffry")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 4, 2, -6)

[node name="RectWall" parent="Objects" instance=ExtResource("6_ymw0p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 3, -7)
size = Vector3(2, 4, 2)
display_material = ExtResource("7_uxxnf")

[node name="Button" parent="Objects" instance=ExtResource("8_e0l7j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 1, -5)
button_material = ExtResource("9_0o6dn")
button_size = 2.6
margin_size = 0.3

[node name="Lighting" type="Node3D" parent="."]

[node name="OmniLight3D" parent="Lighting" instance=ExtResource("4_x15ew")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, -3)
omni_range = 10.0

[node name="CamRig" type="Node3D" parent="." node_paths=PackedStringArray("menu_panels")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5, 6, 1)
script = ExtResource("10_0nig7")
rig_limit_1 = Vector2(3.5, 6.5)
rig_limit_2 = Vector2(17.5, 2.5)
menu_layer_size = Vector2(4, 2.5)
menu_layer_offset = Vector3(2, -1, -1)
menu_layer_anim_time = 0.25
cam_move_weight = 0.3
menu_panels = [NodePath("MainMenuUI/MainMenuPanel"), NodePath("MainMenuUI/SettingsPage"), NodePath("MainMenuUI/LevelSelectPage")]

[node name="MenuCam" type="Camera3D" parent="CamRig"]
environment = ExtResource("5_67j28")
current = true

[node name="CamEyelids" type="ColorRect" parent="CamRig/MenuCam"]
z_index = 100
z_as_relative = false
material = SubResource("ShaderMaterial_pvc8a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="MainMenuUI" type="Control" parent="CamRig"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MainMenuPanel" type="ColorRect" parent="CamRig/MainMenuUI"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.15
anchor_right = 0.333
anchor_bottom = 0.85
offset_left = -200.0
offset_right = 200.0
mouse_filter = 2
color = Color(0.117647, 0.117647, 0.117647, 0.788235)
script = ExtResource("13_aalfo")

[node name="MarginContainer" type="MarginContainer" parent="CamRig/MainMenuUI/MainMenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("12_75kmq")
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 20

[node name="TitleLabel" type="Label" parent="CamRig/MainMenuUI/MainMenuPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Main Menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CamRig/MainMenuUI/MainMenuPanel/MarginContainer"]
layout_mode = 2
theme = ExtResource("12_75kmq")
alignment = 1

[node name="PlayButton" type="Button" parent="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Play"

[node name="LevelButton" type="Button" parent="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="OptionsButton" type="Button" parent="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Options"

[node name="QuitButton" type="Button" parent="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsPage" type="ColorRect" parent="CamRig/MainMenuUI"]
visible = false
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.15
anchor_right = 0.333
anchor_bottom = 0.85
offset_left = -200.0
offset_right = 200.0
mouse_filter = 2
color = Color(0.117647, 0.117647, 0.117647, 0.788235)
script = ExtResource("15_uto0o")

[node name="MarginContainer" type="MarginContainer" parent="CamRig/MainMenuUI/SettingsPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("12_75kmq")
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 20

[node name="TitleLabel" type="Label" parent="CamRig/MainMenuUI/SettingsPage/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Settings"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CamRig/MainMenuUI/SettingsPage/MarginContainer"]
layout_mode = 2
theme = ExtResource("12_75kmq")
alignment = 1

[node name="BackButton" type="Button" parent="CamRig/MainMenuUI/SettingsPage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="LevelSelectPage" type="ColorRect" parent="CamRig/MainMenuUI"]
visible = false
custom_minimum_size = Vector2(400, 500)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.15
anchor_right = 0.333
anchor_bottom = 0.85
offset_left = -200.0
offset_right = 200.0
mouse_filter = 2
color = Color(0.117647, 0.117647, 0.117647, 0.788235)
script = ExtResource("16_e8shy")

[node name="MarginContainer" type="MarginContainer" parent="CamRig/MainMenuUI/LevelSelectPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("12_75kmq")
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 20

[node name="TitleLabel" type="Label" parent="CamRig/MainMenuUI/LevelSelectPage/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Level Select"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CamRig/MainMenuUI/LevelSelectPage/MarginContainer"]
layout_mode = 2
theme = ExtResource("12_75kmq")
alignment = 1

[node name="BackButton" type="Button" parent="CamRig/MainMenuUI/LevelSelectPage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="change_menu_layer" from="CamRig/MainMenuUI/MainMenuPanel" to="CamRig" method="_on_menu_panel_change_menu_layer"]
[connection signal="pressed" from="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer/PlayButton" to="CamRig" method="_on_play_button_pressed"]
[connection signal="pressed" from="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer/LevelButton" to="CamRig/MainMenuUI/MainMenuPanel" method="_on_level_button_pressed"]
[connection signal="pressed" from="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer/OptionsButton" to="CamRig/MainMenuUI/MainMenuPanel" method="_on_options_button_pressed"]
[connection signal="pressed" from="CamRig/MainMenuUI/MainMenuPanel/MarginContainer/VBoxContainer/QuitButton" to="CamRig/MainMenuUI/MainMenuPanel" method="_on_quit_button_pressed"]
[connection signal="change_menu_layer" from="CamRig/MainMenuUI/SettingsPage" to="CamRig" method="_on_menu_panel_change_menu_layer"]
[connection signal="pressed" from="CamRig/MainMenuUI/SettingsPage/MarginContainer/VBoxContainer/BackButton" to="CamRig/MainMenuUI/SettingsPage" method="_on_back_button_pressed"]
[connection signal="change_menu_layer" from="CamRig/MainMenuUI/LevelSelectPage" to="CamRig" method="_on_menu_panel_change_menu_layer"]
[connection signal="pressed" from="CamRig/MainMenuUI/LevelSelectPage/MarginContainer/VBoxContainer/BackButton" to="CamRig/MainMenuUI/LevelSelectPage" method="_on_back_button_pressed"]
